Informes-detalles de vista
En index de cuentas, gastos e ingresos se hace un cambio para ver los nombres de los campos y no los Id.

Se implementa la función de los informes mensuales y anuales según el usuario.

--- a/Proyecto_final/Views/Cuentas/Index.cshtml
+++ b/Proyecto_final/Views/Cuentas/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.FechaCreacion)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.UserId)
+                @Html.DisplayFor(modelItem => item.User.NombreUsuario)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CuentaId">Edit</a> |
