--- a/Proyecto_final/Views/Home/Index.cshtml
+++ b/Proyecto_final/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Bienvenido</h1>
-    <p>Este es un sistema gestor de gastos personales</p>
+    <p>Este es un sistema gestor de gastos</p>
 </div>
