--- a/Proyecto_final/Views/Ingresos/Index.cshtml
+++ b/Proyecto_final/Views/Ingresos/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.FechaIngreso)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cuenta.CuentaId)
+                @Html.DisplayFor(modelItem => item.Cuenta.NombreCuenta)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.IngresoId">Edit</a> |
