--- a/Proyecto_final/Views/Categorias/Edit.cshtml
+++ b/Proyecto_final/Views/Categorias/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Proyecto_final.Models.Categoria
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 @{
     ViewData["Title"] = "Edit";
 }
