--- a/Proyecto_final/Views/Home/Privacy.cshtml
+++ b/Proyecto_final/Views/Home/Privacy.cshtml
@@ -2,5 +2,5 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 <p>Use this page to detail your site's privacy policy.</p>
