--- a/Proyecto_final/Views/Home/ResultadoInforme.cshtml
+++ b/Proyecto_final/Views/Home/ResultadoInforme.cshtml
@@ -1,9 +1,8 @@
 ﻿@model Proyecto_final.Models.ResultadoInforme
-
 <div>
     @Html.ActionLink("Regresar a la pagina de inicio", "Index", "Home", null, new { @class = "btn btn-primary" })
 </div>
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 <br />
 <br />
 
