--- a/Proyecto_final/Views/Shared/_Layout.cshtml
+++ b/Proyecto_final/Views/Shared/_Layout.cshtml
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Gestor de Gastos Personales</title>
+    <title>@ViewData["Title"] - Proyecto_final</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Proyecto_final.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
+        <img src="C:\Users\Maradiaga\Desktop\UAM\Actuales\Progra 3\Proyecto\Proyecto-Final---Progra-3\Imagenes\imagen_gastos.png">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Gestor de Gastos Personales</a>
@@ -44,7 +45,8 @@
                 </div>
             </div>
         </nav>
-    </header>
+    </img>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
