--- a/Proyecto_final/Views/Categorias/Index.cshtml
+++ b/Proyecto_final/Views/Categorias/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Proyecto_final.Models.Categoria>
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 @{
     ViewData["Title"] = "Index";
 }
