--- a/Proyecto_final/Views/Cuentas/Details.cshtml
+++ b/Proyecto_final/Views/Cuentas/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Proyecto_final.Models.Cuenta
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 @{
     ViewData["Title"] = "Details";
 }
