--- a/Proyecto_final/Views/Home/Index.cshtml
+++ b/Proyecto_final/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 <div class="text-center">
     <h1 class="display-4">Bienvenido</h1>
     <p>Este es un sistema gestor de gastos</p>
