--- a/Proyecto_final/Views/Usuarios/Details.cshtml
+++ b/Proyecto_final/Views/Usuarios/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Proyecto_final.Models.Usuario
-
+<link rel="stylesheet" href="~/css/Diseño.css" />
 @{
     ViewData["Title"] = "Details";
 }
