--- a/Proyecto_final/wwwroot/css/Login.css
+++ b/Proyecto_final/wwwroot/css/Login.css
@@ -40,7 +40,10 @@ button {
     border-radius: 4px;
     cursor: pointer;
 }
+button:hover {
+    background-color: #45a049;
+ }
 
-    button:hover {
-        background-color: #45a049;
-    }
+h2 {
+    margin-right: 50px;
+}
