Detalles de diseño

--- a/Proyecto_final/Views/Gastos/Index.cshtml
+++ b/Proyecto_final/Views/Gastos/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+@{
+    ViewData["Title"] = "Inicio";
+}
+
+
 <table class="table">
     <thead>
         <tr>
