--- a/Proyecto_final/Views/Gastos/Index.cshtml
+++ b/Proyecto_final/Views/Gastos/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.FechaGasto)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Categoria.NombreCategoria)
+                @Html.DisplayFor(modelItem => item.CategoriaId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cuenta.NombreCuenta)
